# Minecraft-Clone

./: CMakeLists.txt  Minecraft Clone.slnx  Minecraft Clone.vcxproj  Minecraft Clone.vcxproj.filters  README.md
Minecraft Clone/Debug/: vc145.idb
Minecraft Clone/Debug/Minecraft Clone.tlog/: Minecraft Clone.lastbuildstate
Minecraft Clone/x64/Debug/: Minecraft Clone.exe.recipe  vc145.idb
Minecraft Clone/x64/Debug/Minecraft Clone.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Minecraft Clone.lastbuildstate
assets/asprite/: FullscreenButton.aseprite
assets/textures/aseprite/GUI/: ResumeGameButton.aseprite  SelectedHotBarSlot.aseprite
assets/textures/aseprite/blocks/: BlockOfBlueLight.aseprite  BlockOfGreenLight.aseprite  OakLeaf.aseprite  TextureAtlas.aseprite
include/: Block.h  BlockRegistry.h  Camera.h  Chunk.h  ChunkManager.h  GUI.h  Noise.h  PerlinNoise.h  Shader.h  TerrainGenerator.h  Window.h  WorldSave.h
include/GUI/: BlockOutline.h  Crosshair.h  DebugOverlay.h  HUD.h  PauseMenu.h
include/Player/: BlockInteraction.h  Camera.h  Player.h
include/Rendering/: Lighting.h  LightingComputeShader.h  Renderer.h  Skybox.h  Texture.h  TextureAtlas.h
include/World/: Chunk.h  ChunkManager.h  TerrainGenerator.h
src/: BlockRegistry.cpp  Camera.cpp  Chunk.cpp  ChunkManager.cpp  GUI.cpp  Noise.cpp  PerlinNoise.cpp  Player.cpp  Renderer.cpp  Shader.cpp  TerrainGenerator.cpp  Texture.cpp  Window.cpp  WorldSave.cpp  main.cpp
src/GUI/: BlockOutline.cpp  Crosshair.cpp  DebugOverlay.cpp  GUI.cpp  HUD.cpp  PauseMenu.cpp
src/Player/: BlockInteraction.cpp  Camera.cpp  Player.cpp
src/Rendering/: Lighting.cpp  LightingComputeShader.cpp  Renderer.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  TextureAtlas.cpp
src/World/: Chunk.cpp  ChunkManager.cpp  TerrainGenerator.cpp  WorldSave.cpp
